// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Should Render App component should render correctly onto the page 1`] = `
<h1>
  HELLO SERVICE IS RUNNING!
</h1>
`;

exports[`Components Should Render App component should render correctly onto the page 2`] = `
<div>
  <div>
    title
  </div>
  <div>
    ratings
  </div>
  <div>
    questions answered
  </div>
</div>
`;

exports[`Components Should Render ItemColorOptions component should render correctly 1`] = `<div />`;

exports[`Components Should Render ItemConfiguration component should render correctly 1`] = `
<div>
  Item Configuration
</div>
`;

exports[`Components Should Render ItemDescription component should render correctly 1`] = `
<div>
  Item Description
</div>
`;

exports[`Components Should Render ItemHeading component should render correctly 1`] = `
<div>
  <div>
    title
  </div>
  <div>
    ratings
  </div>
  <div>
    questions answered
  </div>
</div>
`;

exports[`Components Should Render ItemPriceDetails component should render correctly 1`] = `
<div>
  Item price Details
</div>
`;
